[tool.poetry]
name = "pipelineproject"
version = "0.1.0"
description = ""
authors = ["Abhinav Govindaraju <50673595+Abheast12@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gloo-lib = "^1.3.1"
baml = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
