[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [
    { include = "fast_api_starter", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
baml-py = "^0.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
