[project]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = [{ name = "None" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.31.0,<0.32",
    "baml-py==0.80.2",
    "python-dotenv>=1.0.1,<2",
]

[tool.hatch.build.targets.sdist]
include = ["./fast_api_starter"]

[tool.hatch.build.targets.wheel]
include = ["./fast_api_starter"]

[tool.hatch.build.targets.wheel.sources]
"./fast_api_starter" = "fast_api_starter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
