[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-py>=0.89.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["baml_src*", "baml_client*"]
